<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@color/background">

    <ImageView
        android:layout_width="166dp"
        android:layout_height="161dp"
        android:src="@drawable/bg_ellipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="166dp"
        android:text="Welcome Onboard!"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="We help you meet up you tasks on time."
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/enterNameLayout"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Enter your full name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterName"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/enterEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/enterNameLayout"
        app:layout_constraintStart_toStartOf="@+id/enterNameLayout"
        app:layout_constraintTop_toBottomOf="@+id/enterNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/enterPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/enterEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/enterEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/enterPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/enterPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/yellow"
        android:hint="@string/register"
        android:paddingVertical="22dp"
        android:textColorHint="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/registerButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textSize="14dp"
            android:textColor="@color/black"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/yellow"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>